--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,13 @@ nav ul li a {
 /* Main Content */
 main {
   flex: 1;
-  padding: 40px;
+  padding: 100px;
+  text-align: center;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .project {
